--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Magnetar/a>
+                <a class="navbar-brand page-scroll" href="#page-top">Magnetar</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -107,28 +107,28 @@
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about-us">About</a>
+                        <a class="page-scroll" href="#about-us">Sobre</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#service">Services</a>
+                        <a class="page-scroll" href="#service">Serviços</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Team</a>
+                        <a class="page-scroll" href="#team">Equipe</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#pricing">Pricing</a>
+                        <a class="page-scroll" href="#pricing">Valores</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#latest-news">Latest News</a>
+                        <a class="page-scroll" href="#latest-news">Últimas Noticias</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#testimonial">Testimonials</a>
+                        <a class="page-scroll" href="#testimonial">Avaliações</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#partner">Partner</a>
+                        <a class="page-scroll" href="#partner">Parceiros</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">Contato</a>
                     </li>
                 </ul>
             </div>
@@ -160,10 +160,10 @@
                     <div class="slider-content">
                         <div class="col-md-12 text-center">
                             <h1 class="animated3">
-                                <span><strong>Fame</strong> for the highest</span>
+                                <span><strong>Magnetar</strong> Soluções Digitais</span>
                             </h1>
-                            <p class="animated2">At vero eos et accusamus et iusto odio dignissimos<br> ducimus qui blanditiis praesentium voluptatum</p>	
-                            <a href="#feature" class="page-scroll btn btn-primary animated1">Read More</a>
+                            <p class="animated2">Transformando a sua ideia.<br> Atraindo atenção para sua marca</p>	
+                            <a href="#feature" class="page-scroll btn btn-primary animated1">Leia Mais</a>
                         </div>
                     </div>
                 </div>
@@ -175,9 +175,9 @@
                     <div class="slider-content">
                         <div class="col-md-12 text-center">
                             <h1 class="animated1">
-                    		  <span>Welcome to <strong>Fame</strong></span>
+                    		  <span>Bem-Vindo a<strong>Magnetar</strong></span>
                     	    </h1>
-                            <p class="animated2">Generate a flood of new business with the<br> power of a digital media platform</p>
+                            <p class="animated2">Gere uma enxurrada de novos negócios com o<br> poder da mídia digital</p>
                             <a href="#feature" class="page-scroll btn btn-primary animated3">Read More</a>
                         </div>
                     </div>
@@ -189,10 +189,10 @@
                     <div class="slider-content">
                         <div class="col-md-12 text-center">
                             <h1 class="animated2">
-                                <span>The way of <strong>Success</strong></span>
+                                <span>O caminho do<strong>SUCESSO/strong></span>
                             </h1>
-                            <p class="animated1">At vero eos et accusamus et iusto odio dignissimos<br> ducimus qui blanditiis praesentium voluptatum</p>	
-                             <a class="animated3 slider btn btn-primary btn-min-block" href="#">Get Now</a><a class="animated3 slider btn btn-default btn-min-block" href="#">Live Demo</a>
+                            <p class="animated1">Oportunidades não acontecem. <br> Você as cria</p>	
+                             <a class="animated3 slider btn btn-primary btn-min-block" href="#">Obter Orçamento</a><a class="animated3 slider btn btn-default btn-min-block" href="#">Live Demo</a>
                                 
                         </div>
                     </div>
@@ -223,8 +223,8 @@
                         <div class="feature">
                             <i class="fa fa-magic"></i>
                             <div class="feature-content">
-                                <h4>Web Design</h4>
-                                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor. reprehenderit</p>
+                                <h4>Desenvolvimento Web/h4>
+                                <p>Em breve mais um serviço da Magnetar</p>
                             </div>
                         </div>
                     </div><!-- /.col-md-3 -->
@@ -233,7 +233,7 @@
                             <i class="fa fa-gift"></i>
                             <div class="feature-content">
                                 <h4>Graphics Design</h4>
-                                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor. reprehenderit</p>
+                                <p>Mais de 15 anos de Experiência de mercado </p>
                             </div>
                         </div>
                     </div><!-- /.col-md-3 -->
@@ -241,7 +241,7 @@
                         <div class="feature">
                             <i class="fa fa-wordpress"></i>
                             <div class="feature-content">
-                                <h4>Wordpress Theme</h4>
+                                <h4>Consultoria Digital</h4>
                                 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor. reprehenderit</p>
                             </div>
                         </div>
@@ -250,7 +250,7 @@
                         <div class="feature">
                             <i class="fa fa-plug"></i>
                             <div class="feature-content">
-                                <h4>Wordpress Plugin</h4>
+                                <h4>Manutenção de Hardware(PC)</h4>
                                 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor. reprehenderit</p>
                             </div>
                         </div>
@@ -283,7 +283,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="section-title text-center">
-                            <h3>Our Portfolio</h3>
+                            <h3>Nosso Portfolio</h3>
                             <p>Duis aute irure dolor in reprehenderit in voluptate</p>
                         </div>                        
                     </div>
